top-banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poonam portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1><span class="orange-color">poonam tabasum</span> world!</h1>
+            <h2>building climber and train stopper</h2>
+            <p>hellow, everyone. i am poonam tabassum .this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                i am poonam tabassum .this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.programming-hero.com/">hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
