--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
             <img src="images/my-bg2.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>dream big</h1>
+            <h2>become a big web developer
+            </h2>
+            <p>hellow, everyone. i am poonam tabassum .this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                i am poonam tabassum .this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                this is my new update website.
+                amr course ta korte besh moja lagche.wish me good luck.</p>
+            <a class="link-button" target="_blank" href="">download resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
