style border added footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>welcome to</h1>
             <h1><span class="orange-color">poonam tabasum</span> world!</h1>
@@ -31,7 +31,7 @@
             <img src="images/my-bg2.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -48,6 +48,43 @@
             <a class="link-button" target="_blank" href="">download resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h1>full stack developer</h1>
+                <h3 class="orange-color">2022-present |pro level</h3>
+                <p>hellow, everyone. i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                    i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                    this is my new update website.hellow, everyone. i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                    i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                    this is my new update website.</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h1>baby web developer</h1>
+                <h3 class="orange-color">2021-2025|hero learner </h3>
+                <p>
+                    hellow, everyone. i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                    i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                    this is my new update website.hellow, everyone. i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone.
+                    i am poonam tabassum .this is my new update website.
+                    amr course ta korte besh moja lagche.wish me good luck.hellow, everyone. i am poonam tabassum .
+                    this is my new update website
+                </p>
+            </div>
+
+        </div>
+    </section>
 </body>
+<footer>
+    <p>peter perker 2030,a programming hero initiative</p>
+</footer>
 
 </html>
